center menu on pause

--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@
         <div id="main-content">
           <h1 id="title">DEAD VALLEY</h1>
 	  <img id="graphic" src="assets/graphic.png"></img>
-          <ul id="menu">
-            <li id="resume-game">Resume</li>
-            <li id="new-game">New Game</li>
-            <li id="time-challenge">Time Challenge</li>
-            <li id="instructions">Instructions</li>
-            <li id="sound">Sound:<div class="choice"><span class="on">ON</span><span>OFF</span></div></li>
-          </ul>
+	  <div id="menu">
+	    <ul>
+	      <li id="resume-game">Resume</li>
+	      <li id="new-game">New Game</li>
+	      <li id="time-challenge">Time Challenge</li>
+	      <li id="instructions">Instructions</li>
+	      <li id="sound">Sound:<div class="choice"><span class="on">ON</span><span>OFF</span></div></li>
+	    </ul>
+	  </div>
         </div>
       </div>
       <div id="game-over-screen" class="overlay">
