--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         <div class="centering-container">
           <div id="game-over">GAME OVER</div>
         </div>
+	<div class="centering-container">
+	  <a href="#" id="continue-button">Continue?</a>
+	</div>
       </div>
       <div id="help" class="overlay">
         <div id="help-content">
