--- a/index.html
+++ b/index.html
@@ -66,6 +66,30 @@
 	  <a href="#" id="continue-button">Continue?</a>
 	</div>
       </div>
+      <div id="intro-screen" class="overlay">
+        <div class="centering-container">
+          <div id="intro-text">
+            <p>
+            A week has passed since the outbreak.
+            </p>
+            <p>
+            The last couple of days reports coming from the Emergency Broadcast System described a quarrentine zone: a 150 mile radius circle centered on Dead Valley.
+            </p>
+            <p>
+            Centered on your farmhouse.
+            </p>
+            <p>
+            The National Guard is urging any survivors to head for the parameter.
+            </p>
+            <p>
+            You've been holed up for a week and getting sick of eating beans. The walkers are getting closer ever day. If they figure out you're here the barrier you've slapped together will not hold.
+            </p>
+            <p>
+            Time to make a break for it.
+            </p>
+          </div>
+        </div>
+      </div>
       <div id="help" class="overlay">
         <div id="help-content">
           <div class="back">&bull;&nbsp;Back</div>
