more about page changes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div id="about-screen" class="overlay">
         <div class="text-content">
           <div class="back">&bull;&nbsp;Back</div>
-          <h1>Dead Valley</h1>
+          <h1 class="sc">Dead Valley</h1>
           <p>
           Created by <a href="http://dougmcinnes.com">Doug McInnes</a>
           </p>
@@ -85,10 +85,10 @@
           Audio created with <a href="http://www.bfxr.net/">Bfxr</a> and recorded and edited with <a href="http://audacity.sourceforge.net/">Audacity</a>.
           </p>
           <p>
-          Created with <a href="http://www.vim.org">Vim</a>.
+          Written with <a href="http://www.vim.org">Vim</a>.
           </p>
 
-          <a href="http://www.w3.org/html/logo/"><img id="html5logo" src="assets/about/HTML5_Badge_128.png" width="128" height="128"></img></a>
+          <a title="HTML5" href="http://www.w3.org/html/logo/"><img id="html5logo" src="assets/about/HTML5_Badge_128.png" width="128" height="128"></img></a>
         </div>
       </div>
 
