--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/game.css">
-    <script src="vendor/underscore.js"></script>
+    <script src="vendor/underscore-min.js"></script>
     <script src="vendor/jquery-1.7.1.min.js"></script>
     <script src="vendor/jquery-ui-1.8.16.custom.min.js"></script>
     <script src="vendor/sound.js"></script>
