show car glow when dark
fix hints now showing too

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
       <div id="canvas-mask" class="crosshair">
         <div id="nuke"></div>
-        <div id="sprites"></div>
-        <canvas id="sky-canvas" width="900" height="600"></canvas>
+        <div id="sprites">
+          <canvas id="sky-canvas" width="900" height="600"></canvas>
+        </div>
         <div id="background"></div>
       </div>
 
