--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/game.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <script src="vendor/underscore-min.js"></script>
     <script src="vendor/jquery-1.7.1.min.js"></script>
     <script src="vendor/jquery-ui-1.8.16.custom.min.js"></script>
