add something to intro for time trial

--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
             <p>
             Time to make a break for it.
             </p>
+            <p id="time-trial-text">
+            You have three days before they cover the entire valley in napalm.
+            </p>
           </div>
         </div>
       </div>
