add firefox performance warning

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 	      <li id="sound">Sound:<div class="choice"><span class="on">ON</span><span>OFF</span></div></li>
 	    </ul>
 	  </div>
+          <span id="moz-warn">Highly recommend you use the latest Safari or Chrome for the best performance.</span>
         </div>
       </div>
 
