add beta testers to about

--- a/index.html
+++ b/index.html
@@ -73,12 +73,9 @@
       <div id="about-screen" class="overlay">
         <div class="text-content">
           <div class="back">&bull;&nbsp;Back</div>
-          <h1 class="sc">Dead Valley</h1>
+          <h2 class="sc">Dead Valley</h2>
           <p>
-          Created by <a href="http://dougmcinnes.com">Doug McInnes</a>
-          </p>
-          <p>
-          <a href="http://dogwatchgames.com">Dogwatch Games</a>
+          Created by <a href="http://dougmcinnes.com">Doug McInnes</a> &mdash; <a href="http://dogwatchgames.com">Dogwatch Games</a>
           </p>
           <p>
           Made possible with these fine libraries:
@@ -98,6 +95,15 @@
           </p>
           <p>
           Written with <a href="http://www.vim.org">Vim</a>.
+          </p>
+          <p>
+          Thank You Beta Testers!
+          <ul>
+            <li>Giles Bowkett</li>
+            <li>Mark Miller</li>
+            <li>Jeff Seebach</li>
+            <li>Lonzia Shay</li>
+          </ul>
           </p>
 
           <a title="HTML5" href="http://www.w3.org/html/logo/"><img id="html5logo" src="assets/about/HTML5_Badge_128.png" width="128" height="128"></img></a>
