--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="vendor/jquery-ui-1.8.16.custom.min.js"></script>
     <script src="vendor/sound.js"></script>
     <script src="vendor/modernizr.js"></script>
-    <script data-main="lib/Main" src="vendor/require.js"></script>
+    <script src="vendor/require.js"></script>
+    <script src="config.js"></script>
   </head>
   <body>
     <div id="container">
