--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="keywords" content="game,zombies,HTML5,HTML5 game" />
+    <meta name="description" content="Escape from Zombie-infested Dead Valley in this HTML5 Grand Theft Auto style Game." />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/game.css">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <script src="vendor/underscore-min.js"></script>
@@ -130,7 +132,7 @@
             You've been holed up for a week and getting sick of eating beans. The walkers are getting closer ever day. If they figure out you're here the barrier you've slapped together will not hold.
             </p>
             <p>
-            Time to make a break for it.
+            Time to make a break for it. Drive 150 miles to escape from the valley!
             </p>
             <p id="time-trial-text">
             You have three days before they cover the entire valley in napalm.
