markup valid-making

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Dead Valley</title>
     <meta name="keywords" content="game,zombies,HTML5,HTML5 game" />
     <meta name="description" content="Escape from Zombie-infested Dead Valley in this HTML5 Grand Theft Auto style Game." />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/game.css">
@@ -49,7 +50,7 @@
       <div id="main-screen" class="overlay">
         <div id="main-content">
           <h1 id="title">DEAD VALLEY</h1>
-	  <img id="graphic" src="assets/graphic.png"></img>
+	  <img id="graphic" src="assets/graphic.png" alt="graphic"/>
 	  <div id="menu">
 	    <ul>
 	      <li id="resume-game">Resume</li>
@@ -82,6 +83,7 @@
           </p>
           <p>
           Made possible with these fine libraries:
+          </p>
           <ul>
             <li><a href="http://jquery.com/">jQuery</a></li>
             <li><a href="http://requirejs.org/">Requirejs</a></li>
@@ -89,7 +91,6 @@
             <li><a href="http://www.createjs.com/#!/SoundJS">Soundjs</a></li>
             <li><a href="http://modernizr.com/">Modernizr</a></li>
           </ul>
-          </p>
           <p>
           Graphics created with <a href="http://www.pixelmator.com/">Pixelmator</a> and <a href="http://itunes.apple.com/us/app/artstudio-for-ipad-draw-paint/id364017607?mt=8">Art Studio for iPad</a>.
           </p>
@@ -101,15 +102,15 @@
           </p>
           <p>
           Thank You Beta Testers!
+          </p>
           <ul>
             <li>Giles Bowkett</li>
             <li>Mark Miller</li>
             <li>Jeff Seebach</li>
             <li>Lonzia Shay</li>
           </ul>
-          </p>
 
-          <a title="HTML5" href="http://www.w3.org/html/logo/"><img id="html5logo" src="assets/about/HTML5_Badge_128.png" width="128" height="128"></img></a>
+          <a title="HTML5" href="http://www.w3.org/html/logo/"><img id="html5logo" alt="HTML5" src="assets/about/HTML5_Badge_128.png" width="128" height="128"/></a>
         </div>
       </div>
 
@@ -147,37 +148,37 @@
 
           <div id="figures">
             <figure id="fig1">
-            <img src="assets/help/enter_car.png"></img>
-            <img src="assets/help/enter_house.png"></img>
+            <img src="assets/help/enter_car.png" alt="Enter Car"/>
+            <img src="assets/help/enter_house.png" alt="Enter House"/>
             <figcaption>Enter/Exit a car or building by pressing E</figcaption>
             </figure>
 
             <figure id="fig2">
-            <img src="assets/help/activate_flashlight.png"></img>
-            <img src="assets/help/flashlight_usage.png"></img>
+            <img src="assets/help/activate_flashlight.png" alt="Activate Flashlight"/>
+            <img src="assets/help/flashlight_usage.png" alt="Enter House"/>
             <figcaption>Put the flashlight in the inventory hands to activate it</figcaption>
             </figure>
 
             <figure id="fig3">
-            <img src="assets/help/activate_glock.png"></img>
-            <img src="assets/help/glock_usage.png"></img>
+            <img src="assets/help/activate_glock.png" alt="Activate Glock"/>
+            <img src="assets/help/glock_usage.png" alt="Glock Usage"/>
             <figcaption>Put weapons in the inventory hands to make them the active weapon</figcaption>
             </figure>
 
             <figure id="fig4">
-            <img src="assets/help/fuel_car.png"></img>
-            <img src="assets/help/fuel_gascan.png"></img>
+            <img src="assets/help/fuel_car.png" alt="Fuel Car"/>
+            <img src="assets/help/fuel_gascan.png" alt="Fuel Gascan"/>
             <figcaption>Touch a gas pump to fuel nearby cars or inventory items</figcaption>
             </figure>
 
             <figure id="fig6">
-            <img src="assets/help/siphon.png"></img>
-            <img src="assets/help/siphon_gascan.png"></img>
+            <img src="assets/help/siphon.png" alt="siphon"/>
+            <img src="assets/help/siphon_gascan.png" alt="Siphon Gascan"/>
             <figcaption>Touch a car, activate the siphon then click on nearby cars or inventory items to transfer fuel to them</figcaption>
             </figure>
 
             <figure id="fig5">
-            <img src="assets/help/gascan_car.png"></img>
+            <img src="assets/help/gascan_car.png" alt="Gascan Car"/>
             <figcaption>Activate the gas can and click on a touching car to fuel it</figcaption>
             </figure>
           </div>
