--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           <ul>
             <li>Cars need fuel to run!</li>
             <li>A car takes damage by running into things (even Zombies), driving over rough ground (anything except a road), getting shot, or beat up by a melee weapon.</li>
-            <li>When the car is in bad shape the engine will start to smoke, when it's in really bad shape the Check Engine light will flash -- if the car takes much more damage it will explode.</li>
+            <li>When the car is in bad shape the engine will start to smoke, when it's in really bad shape the Check Engine light will flash. If the car takes much more damage it will explode.</li>
             <li>Exploding cars do damage to nearby objects, Zombies, and you!</li>
             <li>Damage to cars can knock out their head and taillights if the damage is close to one of those areas, so be careful when driving at night.</li>
           </ul>
@@ -247,12 +247,19 @@
             <li>Zombies damage you if they claw you (duh).</li>
             <li>Zombies can force you out of a building or car by hitting it enough times (the more Zombies the faster you're forced out!).</li>
             <li>Zombies are attracted to noise.</li>
-            <li>Some buildings have Zombies in them -- when you try to enter they will pop out instead!</li>
+            <li>Some buildings have Zombies in them. When you try to enter they will pop out instead!</li>
           </ul>
 
           <h4>Saving:</h4>
           <ul>
             <li>The game automatically saves if you quit your browser or close the tab the game is in. Next time you go to the game page the your last game will be restored.</li>
+          </ul>
+
+          <h4>Tips:</h4>
+          <ul>
+            <li>Fuel is the most important thing in the game. Without fuel you're stuck!</li>
+            <li>Be sure to take every last bullet &mdash; right click on any extra weapons you find to get their ammunition.</li>
+            <li>Store extra gear in your car if there's limited space in your inventory. Be careful! If the car is destroyed your gear is gone.</li>
           </ul>
         </div>
       </div>
