--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
           <h4>Saving:</h4>
           <ul>
-            <li>The game automatically saves if you quit your browser or close the tab the game is in. Next time you go to the game page the your last game will be restored.</li>
+            <li>The game automatically saves if you quit your browser or close this tab. Next time you load this page select Resume to continue your game.</li>
           </ul>
 
           <h4>Tips:</h4>
