separate countdown and clock

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <span class="minutes">&nbsp;</span>
           <span class="meridiem">&nbsp;</span>
         </span>
+        <span id="time-remaining">&nbsp;</span>
         <span id="distance">&nbsp;</span>
         <span id="framerate">&nbsp;</span>
       </div>
