fix editor includes

--- a/editor.html
+++ b/editor.html
@@ -3,8 +3,7 @@
     <title>Editor</title>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/game.css">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/editor.css">
-    <script src="vendor/json2.js"></script>
-    <script src="vendor/underscore.js"></script>
+    <script src="vendor/underscore-min.js"></script>
     <script src="vendor/jquery-1.7.1.min.js"></script>
     <script src="vendor/jquery.lightbox_me.js"></script>
     <script data-main="editor/editor" src="vendor/require.js"></script>
