--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
         </div>
       </div>
 
+      <div id="stats-screen" class="overlay">
+        <div class="centering-container">
+          <div id="stats-content">
+          </div>
+        </div>
+      </div>
+
       <div id="help" class="overlay">
         <div class="text-content">
           <div class="back">&bull;&nbsp;Back</div>
