--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 	      <li id="resume-game">Resume</li>
 	      <li id="new-game">New Game</li>
 	      <li id="time-challenge">Time Challenge</li>
+	      <li id="stats">Stats</li>
 	      <li id="instructions">Instructions</li>
 	      <li id="about">About</li>
 	      <li id="sound">Sound:<div class="choice"><span class="on">ON</span><span>OFF</span></div></li>
@@ -144,7 +145,7 @@
       </div>
 
       <div id="stats-screen" class="overlay">
-        <div class="centering-container">
+        <div class="text-content">
           <div id="stats-content">
           </div>
         </div>
