add back button to stats screen

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 
       <div id="stats-screen" class="overlay">
         <div class="text-content">
+          <div class="back">&bull;&nbsp;Back</div>
           <div id="stats-content">
           </div>
         </div>
