change background to a canvas

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div id="sprites">
           <canvas id="sky-canvas" width="900" height="600"></canvas>
         </div>
-        <div id="background"></div>
+        <canvas id="background" width="900" height="600"></canvas>
       </div>
 
       <div id="loading-screen" class="overlay">
