--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       <div id="loading-screen" class="overlay">
         <div id="progress"><div id="progress-slider"></div></div>
       </div>
+
       <div id="main-screen" class="overlay">
         <div id="main-content">
           <h1 id="title">DEAD VALLEY</h1>
@@ -77,7 +78,10 @@
 	      <li id="sound">Sound:<div class="choice"><span class="on">ON</span><span>OFF</span></div></li>
 	    </ul>
 	  </div>
-          <span id="moz-warn">Highly recommend you use the latest Safari or Chrome for the best performance.</span>
+          <div id="messages">
+            <div>Check out the <a href="https://groups.google.com/forum/?hl=en&fromgroups#!forum/deadvalley" target="_blank">Dead Valley Forum</a>!</div>
+            <div id="moz-warn">Highly recommend you use the latest Safari or Chrome for the best performance.</div>
+          </div>
         </div>
       </div>
 
