--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div id="about-screen" class="overlay">
         <div class="text-content">
           <div class="back">&bull;&nbsp;Back</div>
-          <h2 class="sc">Dead Valley</h2>
+          <h2 class="sc">Dead Valley <span id="version">###</span></h2>
           <p>
           Created by <a href="http://dougmcinnes.com">Doug McInnes</a> &mdash; <a href="http://dogwatchgames.com">Dogwatch Games</a>
           </p>
