cache buster for stylesheet and config
use the version number ###

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Dead Valley</title>
     <meta name="keywords" content="game,zombies,HTML5,HTML5 game" />
     <meta name="description" content="Escape from Zombie-infested Dead Valley in this HTML5 Grand Theft Auto style Game." />
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/game.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/game.css?cb=###">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <script src="vendor/underscore-min.js"></script>
     <script src="vendor/jquery-1.7.1.min.js"></script>
@@ -12,7 +12,7 @@
     <script src="vendor/sound.js"></script>
     <script src="vendor/modernizr.js"></script>
     <script src="vendor/require.js"></script>
-    <script src="config.js"></script>
+    <script src="config.js?cb=###"></script>
 
     <script type="text/javascript">
       if (window.DV) {
