--- a/index.html
+++ b/index.html
@@ -295,17 +295,19 @@
 
     <br/><br/><br/>
 
-    <script type="text/javascript"><!--
-       google_ad_client = "ca-pub-5864248253570237";
-       /* deadvalley-bottom */
-       google_ad_slot = "2903302242";
-       google_ad_width = 728;
-       google_ad_height = 90;
-       //-->
-    </script>
-    <script type="text/javascript"
-src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-    </script>
+    <div align="center">
+      <script type="text/javascript"><!--
+         google_ad_client = "ca-pub-5864248253570237";
+         /* deadvalley-bottom */
+         google_ad_slot = "2903302242";
+         google_ad_width = 728;
+         google_ad_height = 90;
+         //-->
+      </script>
+      <script type="text/javascript"
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+      </script>
+    </div>
 
   </body>
 </html>
