--- a/index.html
+++ b/index.html
@@ -66,18 +66,18 @@
       <div id="main-screen" class="overlay">
         <div id="main-content">
           <h1 id="title">DEAD VALLEY</h1>
-	  <img id="graphic" src="assets/graphic.png" alt="graphic"/>
-	  <div id="menu">
-	    <ul>
-	      <li id="resume-game">Resume</li>
-	      <li id="new-game">New Game</li>
-	      <li id="time-challenge">Time Challenge</li>
-	      <li id="stats">Stats</li>
-	      <li id="instructions">Instructions</li>
-	      <li id="about">About</li>
-	      <li id="sound">Sound:<div class="choice"><span class="on">ON</span><span>OFF</span></div></li>
-	    </ul>
-	  </div>
+          <img id="graphic" src="assets/graphic.png" alt="graphic"/>
+          <div id="menu">
+            <ul>
+              <li id="resume-game">Resume</li>
+              <li id="new-game">New Game</li>
+              <li id="time-challenge">Time Challenge</li>
+              <li id="stats">Stats</li>
+              <li id="instructions">Instructions</li>
+              <li id="about">About</li>
+              <li id="sound">Sound:<div class="choice"><span class="on">ON</span><span>OFF</span></div></li>
+            </ul>
+          </div>
           <div id="messages">
             <div>Check out the <a href="https://groups.google.com/forum/?hl=en&fromgroups#!forum/deadvalley" target="_blank">Dead Valley Forum</a>!</div>
             <div id="moz-warn">Highly recommend you use the latest Safari or Chrome for the best performance.</div>
@@ -89,9 +89,10 @@
         <div class="centering-container">
           <div id="game-over">GAME OVER</div>
         </div>
-	<div class="centering-container">
-	  <a href="#" id="continue-button">Continue?</a>
-	</div>
+        <div class="centering-container">
+          <a href="#" class="game-over-button" id="continue-button">Continue</a>
+          <a href="#" class="game-over-button" id="quit-button">Quit</a>
+        </div>
       </div>
 
       <div id="about-screen" class="overlay">
