add GameMix module

--- a/ad.html
+++ b/ad.html
@@ -8,3 +8,6 @@
 </script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
+<br/>
+<br/>
+<script type="text/javascript" src="http://bx.gamemix.com/promote?action=embed&partnerId=6788244&siteId=6821358"></script>
