--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 
       <div id="about-screen" class="overlay">
         <div class="text-content">
-          <div class="back">&bull;&nbsp;Back</div>
+          <a href="https://github.com/dmcinnes/dead-valley"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
+          <div class="back" style="right: 200px; position: absolute;">&bull;&nbsp;Back</div>
           <h2 class="sc">Dead Valley <span id="version">###</span></h2>
           <p>
           Created by <a href="http://dougmcinnes.com">Doug McInnes</a> &mdash; <a href="http://dogwatchgames.com">Dogwatch Games</a>
